ConEmu 190108 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=180626
-location_arc=4473350,x6F3472D9,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuPack.180626.7z
-location_exe=6750272,xF7A8672A,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuSetup.180626.exe
-md5_arc=1426aba83f7e64c0890971306a4f0957
-md5_exe=d75fc5367027c1c3458f99d5ab029717
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180626.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180626.exe?use_mirror=autoselect
+version=190108
+location_arc=4504301,x4C8BDA59,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuPack.190108.7z
+location_exe=6793296,xCC397401,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuSetup.190108.exe
+md5_arc=3f1d11da0064976d29160c6fdfcc4ba0
+md5_exe=cd0ae95c7d85d6fbd96a9f7664cbcd33
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190108.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190108.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=180626
-location_arc=4473350,x6F3472D9,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuPack.180626.7z
-location_exe=6750272,xF7A8672A,https://github.com/Maximus5/ConEmu/releases/download/v18.06.26/ConEmuSetup.180626.exe
-md5_arc=1426aba83f7e64c0890971306a4f0957
-md5_exe=d75fc5367027c1c3458f99d5ab029717
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.180626.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.180626.exe?use_mirror=autoselect
+version=190108
+location_arc=4504301,x4C8BDA59,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuPack.190108.7z
+location_exe=6793296,xCC397401,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuSetup.190108.exe
+md5_arc=3f1d11da0064976d29160c6fdfcc4ba0
+md5_exe=cd0ae95c7d85d6fbd96a9f7664cbcd33
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190108.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190108.exe?use_mirror=autoselect
