ConEmu 190217 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190108
-location_arc=4504301,x4C8BDA59,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuPack.190108.7z
-location_exe=6793296,xCC397401,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuSetup.190108.exe
-md5_arc=3f1d11da0064976d29160c6fdfcc4ba0
-md5_exe=cd0ae95c7d85d6fbd96a9f7664cbcd33
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190108.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190108.exe?use_mirror=autoselect
+version=190217
+location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
+location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
+md5_arc=af4cb12d951404487c0188f489324da2
+md5_exe=72bbfadaccf26bc9a3712c2968e611e4
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190108
-location_arc=4504301,x4C8BDA59,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuPack.190108.7z
-location_exe=6793296,xCC397401,https://github.com/Maximus5/ConEmu/releases/download/v19.01.08/ConEmuSetup.190108.exe
-md5_arc=3f1d11da0064976d29160c6fdfcc4ba0
-md5_exe=cd0ae95c7d85d6fbd96a9f7664cbcd33
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190108.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190108.exe?use_mirror=autoselect
+version=190217
+location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
+location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
+md5_arc=af4cb12d951404487c0188f489324da2
+md5_exe=72bbfadaccf26bc9a3712c2968e611e4
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
