ConEmu 190224 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190217
-location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
-location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
-md5_arc=af4cb12d951404487c0188f489324da2
-md5_exe=72bbfadaccf26bc9a3712c2968e611e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
+version=190224
+location_arc=4660084,xB6028BBC,https://github.com/Maximus5/ConEmu/releases/download/v19.02.24/ConEmuPack.190224.7z
+location_exe=6968400,x05520461,https://github.com/Maximus5/ConEmu/releases/download/v19.02.24/ConEmuSetup.190224.exe
+md5_arc=ce05a527fe46b3fae4dfed540278a98d
+md5_exe=7dc11d215975905ea9c945d3a75e7a9b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190224.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190224.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190217
-location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
-location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
-md5_arc=af4cb12d951404487c0188f489324da2
-md5_exe=72bbfadaccf26bc9a3712c2968e611e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
+version=190224
+location_arc=4660084,xB6028BBC,https://github.com/Maximus5/ConEmu/releases/download/v19.02.24/ConEmuPack.190224.7z
+location_exe=6968400,x05520461,https://github.com/Maximus5/ConEmu/releases/download/v19.02.24/ConEmuSetup.190224.exe
+md5_arc=ce05a527fe46b3fae4dfed540278a98d
+md5_exe=7dc11d215975905ea9c945d3a75e7a9b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190224.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190224.exe?use_mirror=autoselect
