--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190217
-location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
-location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
-md5_arc=af4cb12d951404487c0188f489324da2
-md5_exe=72bbfadaccf26bc9a3712c2968e611e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
+version=190225
+location_arc=4660348,xD526D501,https://github.com/Maximus5/ConEmu/releases/download/v19.02.25/ConEmuPack.190225.7z
+location_exe=6965840,x131B089B,https://github.com/Maximus5/ConEmu/releases/download/v19.02.25/ConEmuSetup.190225.exe
+md5_arc=cfb4bf7b00daf20cafc61b9c337d5c8e
+md5_exe=191d3eb3c0caf1dfda599fbc0f7c3331
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190225.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190225.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190217
-location_arc=4505206,x2D18BD93,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuPack.190217.7z
-location_exe=6792272,xB2A8ED64,https://github.com/Maximus5/ConEmu/releases/download/v19.02.17/ConEmuSetup.190217.exe
-md5_arc=af4cb12d951404487c0188f489324da2
-md5_exe=72bbfadaccf26bc9a3712c2968e611e4
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190217.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190217.exe?use_mirror=autoselect
+version=190225
+location_arc=4660348,xD526D501,https://github.com/Maximus5/ConEmu/releases/download/v19.02.25/ConEmuPack.190225.7z
+location_exe=6965840,x131B089B,https://github.com/Maximus5/ConEmu/releases/download/v19.02.25/ConEmuSetup.190225.exe
+md5_arc=cfb4bf7b00daf20cafc61b9c337d5c8e
+md5_exe=191d3eb3c0caf1dfda599fbc0f7c3331
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190225.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190225.exe?use_mirror=autoselect
