ConEmu 190303 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190301
-location_arc=4663406,x7B3C4AE2,https://github.com/Maximus5/ConEmu/releases/download/v19.03.01/ConEmuPack.190301.7z
-location_exe=6963280,x0578007C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.01/ConEmuSetup.190301.exe
-md5_arc=ef5712fbdf4dd4bcb06a8c23363d9dc2
-md5_exe=767c7e97558c98e929c6e2eef9bee12b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190301.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190301.exe?use_mirror=autoselect
+version=190303
+location_arc=4661855,x023C2C67,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuPack.190303.7z
+location_exe=6964304,x500FFD53,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuSetup.190303.exe
+md5_arc=cf65f99baffd1bced607683e3dbd7e80
+md5_exe=da088ec47fe24e024c5156ed386826ed
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190303.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190303.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190301
-location_arc=4663406,x7B3C4AE2,https://github.com/Maximus5/ConEmu/releases/download/v19.03.01/ConEmuPack.190301.7z
-location_exe=6963280,x0578007C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.01/ConEmuSetup.190301.exe
-md5_arc=ef5712fbdf4dd4bcb06a8c23363d9dc2
-md5_exe=767c7e97558c98e929c6e2eef9bee12b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190301.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190301.exe?use_mirror=autoselect
+version=190303
+location_arc=4661855,x023C2C67,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuPack.190303.7z
+location_exe=6964304,x500FFD53,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuSetup.190303.exe
+md5_arc=cf65f99baffd1bced607683e3dbd7e80
+md5_exe=da088ec47fe24e024c5156ed386826ed
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190303.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190303.exe?use_mirror=autoselect
