ConEmu 190310 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190303
-location_arc=4661855,x023C2C67,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuPack.190303.7z
-location_exe=6964304,x500FFD53,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuSetup.190303.exe
-md5_arc=cf65f99baffd1bced607683e3dbd7e80
-md5_exe=da088ec47fe24e024c5156ed386826ed
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190303.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190303.exe?use_mirror=autoselect
+version=190310
+location_arc=4660838,xC1216B80,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuPack.190310.7z
+location_exe=6968912,x4C68CC38,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuSetup.190310.exe
+md5_arc=05c9d38dddb10ac91c4a0f6df3be0e8d
+md5_exe=b1dd83e8f931f375f342b73e255b9718
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190310.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190310.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190303
-location_arc=4661855,x023C2C67,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuPack.190303.7z
-location_exe=6964304,x500FFD53,https://github.com/Maximus5/ConEmu/releases/download/v19.03.03/ConEmuSetup.190303.exe
-md5_arc=cf65f99baffd1bced607683e3dbd7e80
-md5_exe=da088ec47fe24e024c5156ed386826ed
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190303.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190303.exe?use_mirror=autoselect
+version=190310
+location_arc=4660838,xC1216B80,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuPack.190310.7z
+location_exe=6968912,x4C68CC38,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuSetup.190310.exe
+md5_arc=05c9d38dddb10ac91c4a0f6df3be0e8d
+md5_exe=b1dd83e8f931f375f342b73e255b9718
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190310.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190310.exe?use_mirror=autoselect
