ConEmu 190324 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190310
-location_arc=4660838,xC1216B80,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuPack.190310.7z
-location_exe=6968912,x4C68CC38,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuSetup.190310.exe
-md5_arc=05c9d38dddb10ac91c4a0f6df3be0e8d
-md5_exe=b1dd83e8f931f375f342b73e255b9718
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190310.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190310.exe?use_mirror=autoselect
+version=190324
+location_arc=4686573,x1EC16414,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuPack.190324.7z
+location_exe=6994512,x4EB28913,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuSetup.190324.exe
+md5_arc=716102e7af65c04caf6db5c3f8d1ea46
+md5_exe=758d630c1a3bd19b3962cb71372be953
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190324.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190324.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190310
-location_arc=4660838,xC1216B80,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuPack.190310.7z
-location_exe=6968912,x4C68CC38,https://github.com/Maximus5/ConEmu/releases/download/v19.03.10/ConEmuSetup.190310.exe
-md5_arc=05c9d38dddb10ac91c4a0f6df3be0e8d
-md5_exe=b1dd83e8f931f375f342b73e255b9718
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190310.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190310.exe?use_mirror=autoselect
+version=190324
+location_arc=4686573,x1EC16414,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuPack.190324.7z
+location_exe=6994512,x4EB28913,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuSetup.190324.exe
+md5_arc=716102e7af65c04caf6db5c3f8d1ea46
+md5_exe=758d630c1a3bd19b3962cb71372be953
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190324.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190324.exe?use_mirror=autoselect
