--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190324
-location_arc=4686573,x1EC16414,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuPack.190324.7z
-location_exe=6994512,x4EB28913,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuSetup.190324.exe
-md5_arc=716102e7af65c04caf6db5c3f8d1ea46
-md5_exe=758d630c1a3bd19b3962cb71372be953
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190324.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190324.exe?use_mirror=autoselect
+version=190326
+location_arc=4688265,xF2BE463C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuPack.190326.7z
+location_exe=6990928,x5D1DA3CE,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuSetup.190326.exe
+md5_arc=c6244c5d65e5021405cfb9c3d8ed37c9
+md5_exe=afb0e94ccd5b8ef9a06f85f30d48dd50
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190326.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190326.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190324
-location_arc=4686573,x1EC16414,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuPack.190324.7z
-location_exe=6994512,x4EB28913,https://github.com/Maximus5/ConEmu/releases/download/v19.03.24/ConEmuSetup.190324.exe
-md5_arc=716102e7af65c04caf6db5c3f8d1ea46
-md5_exe=758d630c1a3bd19b3962cb71372be953
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190324.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190324.exe?use_mirror=autoselect
+version=190326
+location_arc=4688265,xF2BE463C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuPack.190326.7z
+location_exe=6990928,x5D1DA3CE,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuSetup.190326.exe
+md5_arc=c6244c5d65e5021405cfb9c3d8ed37c9
+md5_exe=afb0e94ccd5b8ef9a06f85f30d48dd50
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190326.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190326.exe?use_mirror=autoselect
