--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190326
-location_arc=4688265,xF2BE463C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuPack.190326.7z
-location_exe=6990928,x5D1DA3CE,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuSetup.190326.exe
-md5_arc=c6244c5d65e5021405cfb9c3d8ed37c9
-md5_exe=afb0e94ccd5b8ef9a06f85f30d48dd50
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190326.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190326.exe?use_mirror=autoselect
+version=190331
+location_arc=4688239,xF4772D0B,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuPack.190331.7z
+location_exe=7001168,xD3665C29,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuSetup.190331.exe
+md5_arc=236b97259d2739aa5ac610910d2017ab
+md5_exe=53b234f7bc300f494eba603009f0fc4c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190331.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190331.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190326
-location_arc=4688265,xF2BE463C,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuPack.190326.7z
-location_exe=6990928,x5D1DA3CE,https://github.com/Maximus5/ConEmu/releases/download/v19.03.26/ConEmuSetup.190326.exe
-md5_arc=c6244c5d65e5021405cfb9c3d8ed37c9
-md5_exe=afb0e94ccd5b8ef9a06f85f30d48dd50
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190326.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190326.exe?use_mirror=autoselect
+version=190331
+location_arc=4688239,xF4772D0B,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuPack.190331.7z
+location_exe=7001168,xD3665C29,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuSetup.190331.exe
+md5_arc=236b97259d2739aa5ac610910d2017ab
+md5_exe=53b234f7bc300f494eba603009f0fc4c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190331.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190331.exe?use_mirror=autoselect
