--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190331
-location_arc=4688239,xF4772D0B,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuPack.190331.7z
-location_exe=7001168,xD3665C29,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuSetup.190331.exe
-md5_arc=236b97259d2739aa5ac610910d2017ab
-md5_exe=53b234f7bc300f494eba603009f0fc4c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190331.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190331.exe?use_mirror=autoselect
+version=190526
+location_arc=4851133,xF1F3FF16,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuPack.190526.7z
+location_exe=7187536,x9F1CC725,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuSetup.190526.exe
+md5_arc=c11e102ae70b4189b8ff3c2badc91a05
+md5_exe=fd3f8bda873325d88d74070bbffdab20
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190331
-location_arc=4688239,xF4772D0B,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuPack.190331.7z
-location_exe=7001168,xD3665C29,https://github.com/Maximus5/ConEmu/releases/download/v19.03.31/ConEmuSetup.190331.exe
-md5_arc=236b97259d2739aa5ac610910d2017ab
-md5_exe=53b234f7bc300f494eba603009f0fc4c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190331.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190331.exe?use_mirror=autoselect
+version=190526
+location_arc=4851133,xF1F3FF16,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuPack.190526.7z
+location_exe=7187536,x9F1CC725,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuSetup.190526.exe
+md5_arc=c11e102ae70b4189b8ff3c2badc91a05
+md5_exe=fd3f8bda873325d88d74070bbffdab20
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
