ConEmu 190623 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190526
-location_arc=4851133,xF1F3FF16,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuPack.190526.7z
-location_exe=7187536,x9F1CC725,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuSetup.190526.exe
-md5_arc=c11e102ae70b4189b8ff3c2badc91a05
-md5_exe=fd3f8bda873325d88d74070bbffdab20
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
+version=190623
+location_arc=4890251,x782C074C,https://github.com/Maximus5/ConEmu/releases/download/v19.06.23/ConEmuPack.190623.7z
+location_exe=7224912,xAE18D8AA,https://github.com/Maximus5/ConEmu/releases/download/v19.06.23/ConEmuSetup.190623.exe
+md5_arc=cd7617a87acb0868f5188c63a2c8437e
+md5_exe=10619d85dc10caa81112b7ca49b73b32
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.190623.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.190623.exe?use_mirror=autoselect
