ConEmu 190714 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190623
-location_arc=4890251,x782C074C,https://github.com/Maximus5/ConEmu/releases/download/v19.06.23/ConEmuPack.190623.7z
-location_exe=7224912,xAE18D8AA,https://github.com/Maximus5/ConEmu/releases/download/v19.06.23/ConEmuSetup.190623.exe
-md5_arc=cd7617a87acb0868f5188c63a2c8437e
-md5_exe=10619d85dc10caa81112b7ca49b73b32
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.190623.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.190623.exe?use_mirror=autoselect
+version=190714
+location_arc=4892285,x1CFF4622,https://github.com/Maximus5/ConEmu/releases/download/v19.07.14/ConEmuPack.190714.7z
+location_exe=7229008,x1924BEA0,https://github.com/Maximus5/ConEmu/releases/download/v19.07.14/ConEmuSetup.190714.exe
+md5_arc=5cb82493bfec5df73313e1d9bb260e18
+md5_exe=f971dd4f00b5f39e5f9b3ba4e2fed638
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.190714.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.190714.exe?use_mirror=autoselect
