ConEmu 191012 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=190526
-location_arc=4851133,xF1F3FF16,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuPack.190526.7z
-location_exe=7187536,x9F1CC725,https://github.com/Maximus5/ConEmu/releases/download/v19.05.26/ConEmuSetup.190526.exe
-md5_arc=c11e102ae70b4189b8ff3c2badc91a05
-md5_exe=fd3f8bda873325d88d74070bbffdab20
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.190526.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.190526.exe?use_mirror=autoselect
+version=191012
+location_arc=4857446,xA4834327,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuPack.191012.7z
+location_exe=7194704,x7B9CB2D4,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuSetup.191012.exe
+md5_arc=2380db40191718ea77165816dbacdceb
+md5_exe=8c3d0551984ab84c45a40ac53d690376
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.191012.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.191012.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=190714
-location_arc=4892285,x1CFF4622,https://github.com/Maximus5/ConEmu/releases/download/v19.07.14/ConEmuPack.190714.7z
-location_exe=7229008,x1924BEA0,https://github.com/Maximus5/ConEmu/releases/download/v19.07.14/ConEmuSetup.190714.exe
-md5_arc=5cb82493bfec5df73313e1d9bb260e18
-md5_exe=f971dd4f00b5f39e5f9b3ba4e2fed638
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.190714.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.190714.exe?use_mirror=autoselect
+version=191012
+location_arc=4857446,xA4834327,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuPack.191012.7z
+location_exe=7194704,x7B9CB2D4,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuSetup.191012.exe
+md5_arc=2380db40191718ea77165816dbacdceb
+md5_exe=8c3d0551984ab84c45a40ac53d690376
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.191012.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.191012.exe?use_mirror=autoselect
