ConEmu 200604 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.191012.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.191012.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=191012
-location_arc=4857446,xA4834327,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuPack.191012.7z
-location_exe=7194704,x7B9CB2D4,https://github.com/Maximus5/ConEmu/releases/download/v19.10.12/ConEmuSetup.191012.exe
-md5_arc=2380db40191718ea77165816dbacdceb
-md5_exe=8c3d0551984ab84c45a40ac53d690376
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.191012.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.191012.exe?use_mirror=autoselect
+version=200604
+location_arc=4906574,x169B947C,https://github.com/Maximus5/ConEmu/releases/download/v20.06.04/ConEmuPack.200604.7z
+location_exe=7388256,xFDE460CC,https://github.com/Maximus5/ConEmu/releases/download/v20.06.04/ConEmuSetup.200604.exe
+md5_arc=e36a4ac2328dc67988c39d71f5b93d2e
+md5_exe=184ead1f4a292e7fd9253bc45670b89c
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.200604.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.200604.exe?use_mirror=autoselect
