ConEmu 200713 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=200615
-location_arc=4878209,xDA3A8839,https://github.com/Maximus5/ConEmu/releases/download/v20.06.15/ConEmuPack.200615.7z
-location_exe=7363168,x1BA6D0B0,https://github.com/Maximus5/ConEmu/releases/download/v20.06.15/ConEmuSetup.200615.exe
-md5_arc=fd0c22e8064305bd17962a571849577a
-md5_exe=99c1ac5b1dd7a121492c9e99cd02f8d0
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.200615.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.200615.exe?use_mirror=autoselect
+version=200713
+location_arc=4873883,x436B40D2,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuPack.200713.7z
+location_exe=7345248,x9F7C326C,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuSetup.200713.exe
+md5_arc=8688ecb7afa1efd9024bf2a9bb958f89
+md5_exe=a2a336862489f6551c40b4a52122e6c6
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.200713.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.200713.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=200615
-location_arc=4878209,xDA3A8839,https://github.com/Maximus5/ConEmu/releases/download/v20.06.15/ConEmuPack.200615.7z
-location_exe=7363168,x1BA6D0B0,https://github.com/Maximus5/ConEmu/releases/download/v20.06.15/ConEmuSetup.200615.exe
-md5_arc=fd0c22e8064305bd17962a571849577a
-md5_exe=99c1ac5b1dd7a121492c9e99cd02f8d0
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.200615.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.200615.exe?use_mirror=autoselect
+version=200713
+location_arc=4873883,x436B40D2,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuPack.200713.7z
+location_exe=7345248,x9F7C326C,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuSetup.200713.exe
+md5_arc=8688ecb7afa1efd9024bf2a9bb958f89
+md5_exe=a2a336862489f6551c40b4a52122e6c6
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.200713.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.200713.exe?use_mirror=autoselect
