--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,45 +2,45 @@
 
 -
   eng: "Download mirrors"
-  run: "Зеркала загрузки"
+  rus: "Зеркала загрузки"
   url: "Downloads.html"
 -
   eng: "Documentation"
-  run: "Документация"
+  rus: "Документация"
   url: "TableOfContents.html"
 -
   eng: "What's new"
-  run: "What's new"
+  rus: "What's new"
   url: "Whats_New.html"
 -
   eng: "Installation"
-  run: "Установка"
+  rus: "Установка"
   url: "Installation.html"
 -
   eng: "Unicode support"
-  run: "Unicode в консоли"
+  rus: "Unicode в консоли"
   url: "UnicodeSupport.html"
 -
   eng: "WSL/Bash"
-  run: "WSL/Bash"
+  rus: "WSL/Bash"
   url: "BashOnWindows.html"
 -
   eng: "Tasks"
-  run: "Tasks"
+  rus: "Tasks"
   url: "Tasks.html"
 -
   eng: "ConEmu FAQ"
-  run: "ConEmu FAQ"
+  rus: "ConEmu FAQ"
   url: "ConEmuFAQ.html"
 -
   eng: "Screenshots"
-  run: "Скриншоты"
+  rus: "Скриншоты"
   url: "Screenshots.html"
 -
   eng: "Settings"
-  run: "Настройка"
+  rus: "Настройка"
   url: "Settings.html"
 -
   eng: "Source code"
-  run: "Исходный код"
+  rus: "Исходный код"
   url: "Source.html"
