ConEmu 201011 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=200713
-location_arc=4873883,x436B40D2,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuPack.200713.7z
-location_exe=7345248,x9F7C326C,https://github.com/Maximus5/ConEmu/releases/download/v20.07.13/ConEmuSetup.200713.exe
-md5_arc=8688ecb7afa1efd9024bf2a9bb958f89
-md5_exe=a2a336862489f6551c40b4a52122e6c6
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.200713.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.200713.exe?use_mirror=autoselect
+version=201011
+location_arc=4848957,x83CE0633,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuPack.201011.7z
+location_exe=7379040,xC722CE32,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuSetup.201011.exe
+md5_arc=82ed465dbbd371fc12f0420ee8b5a3b8
+md5_exe=661fda7c116dc326f194e8b85786338d
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=200928
-location_arc=4865580,xE904E171,https://github.com/Maximus5/ConEmu/releases/download/v20.09.28/ConEmuPack.200928.7z
-location_exe=7361632,xD6C8FC55,https://github.com/Maximus5/ConEmu/releases/download/v20.09.28/ConEmuSetup.200928.exe
-md5_arc=31d4c211fb6151f5e427ab43b2e9bf58
-md5_exe=3cc188e3e3739922a6e266b94359c7ec
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.200928.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.200928.exe?use_mirror=autoselect
+version=201011
+location_arc=4848957,x83CE0633,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuPack.201011.7z
+location_exe=7379040,xC722CE32,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuSetup.201011.exe
+md5_arc=82ed465dbbd371fc12f0420ee8b5a3b8
+md5_exe=661fda7c116dc326f194e8b85786338d
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
