--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201011
-location_arc=4848957,x83CE0633,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuPack.201011.7z
-location_exe=7379040,xC722CE32,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuSetup.201011.exe
-md5_arc=82ed465dbbd371fc12f0420ee8b5a3b8
-md5_exe=661fda7c116dc326f194e8b85786338d
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
+version=201101
+location_arc=4893059,x72F1EDAC,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuPack.201101.7z
+location_exe=7424624,x85227D0B,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuSetup.201101.exe
+md5_arc=2833466bd4679e6138c569ffb3f7afeb
+md5_exe=cdc3c037e6d6d2ebdaa178dc343864fb
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201101.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201101.exe?use_mirror=autoselect
