Revert "ConEmu 201122 AutoUpdate information"
This reverts commit b03ec67ccb498c682e5a3c6ce3f0d7b91674bbfe.

Setup fails to start

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201122
-location_arc=4897599,xDDFCAB3F,https://github.com/Maximus5/ConEmu/releases/download/v20.11.22/ConEmuPack.201122.7z
-location_exe=7421040,x94BBE3D5,https://github.com/Maximus5/ConEmu/releases/download/v20.11.22/ConEmuSetup.201122.exe
-md5_arc=04206f599da73cf757f2d54875ad2977
-md5_exe=e9229b9a6d58bde80fbeebfdcf75adf9
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201122.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201122.exe?use_mirror=autoselect
+version=201101
+location_arc=4893059,x72F1EDAC,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuPack.201101.7z
+location_exe=7424624,x85227D0B,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuSetup.201101.exe
+md5_arc=2833466bd4679e6138c569ffb3f7afeb
+md5_exe=cdc3c037e6d6d2ebdaa178dc343864fb
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201101.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201101.exe?use_mirror=autoselect
