ConEmu 201123 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201101
-location_arc=4893059,x72F1EDAC,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuPack.201101.7z
-location_exe=7424624,x85227D0B,https://github.com/Maximus5/ConEmu/releases/download/v20.11.01/ConEmuSetup.201101.exe
-md5_arc=2833466bd4679e6138c569ffb3f7afeb
-md5_exe=cdc3c037e6d6d2ebdaa178dc343864fb
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201101.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201101.exe?use_mirror=autoselect
+version=201123
+location_arc=4898312,xF9DEE4EA,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23/ConEmuPack.201123.7z
+location_exe=7422064,x52D0B459,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23/ConEmuSetup.201123.exe
+md5_arc=e92cec810ef4ffd6265eccc8aacc659b
+md5_exe=faa3c1684ab86b1182d842fc19f14290
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201123.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201123.exe?use_mirror=autoselect
