--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201123
-location_arc=4898312,xF9DEE4EA,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23/ConEmuPack.201123.7z
-location_exe=7422064,x52D0B459,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23/ConEmuSetup.201123.exe
-md5_arc=e92cec810ef4ffd6265eccc8aacc659b
-md5_exe=faa3c1684ab86b1182d842fc19f14290
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201123.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201123.exe?use_mirror=autoselect
+version=201123a
+location_arc=4898939,xE56BFD6A,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23a/ConEmuPack.201123a.7z
+location_exe=7423088,x72A3A89D,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23a/ConEmuSetup.201123a.exe
+md5_arc=a3f9653f4cce045c9f07fb17f812a296
+md5_exe=b0de858f734166bebf609aa3a3953ce8
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201123a.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201123a.exe?use_mirror=autoselect
