ConEmu 201124 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201123a
-location_arc=4898939,xE56BFD6A,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23a/ConEmuPack.201123a.7z
-location_exe=7423088,x72A3A89D,https://github.com/Maximus5/ConEmu/releases/download/v20.11.23a/ConEmuSetup.201123a.exe
-md5_arc=a3f9653f4cce045c9f07fb17f812a296
-md5_exe=b0de858f734166bebf609aa3a3953ce8
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201123a.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201123a.exe?use_mirror=autoselect
+version=201124
+location_arc=4898832,x8F9A5033,https://github.com/Maximus5/ConEmu/releases/download/v20.11.24/ConEmuPack.201124.7z
+location_exe=7420016,x6C37F13D,https://github.com/Maximus5/ConEmu/releases/download/v20.11.24/ConEmuSetup.201124.exe
+md5_arc=48e434e90af497391bdc360fdcdaf644
+md5_exe=6a1f18df742ec1e9ffa4d842c94a0e22
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201124.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201124.exe?use_mirror=autoselect
