ConEmu 210109 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=201124
-location_arc=4898832,x8F9A5033,https://github.com/Maximus5/ConEmu/releases/download/v20.11.24/ConEmuPack.201124.7z
-location_exe=7420016,x6C37F13D,https://github.com/Maximus5/ConEmu/releases/download/v20.11.24/ConEmuSetup.201124.exe
-md5_arc=48e434e90af497391bdc360fdcdaf644
-md5_exe=6a1f18df742ec1e9ffa4d842c94a0e22
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.201124.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.201124.exe?use_mirror=autoselect
+version=210109
+location_arc=4935961,x239E67A1,https://github.com/Maximus5/ConEmu/releases/download/v21.01.09/ConEmuPack.210109.7z
+location_exe=7463536,x33DE85E3,https://github.com/Maximus5/ConEmu/releases/download/v21.01.09/ConEmuSetup.210109.exe
+md5_arc=d2e28f3321695cdc0cfacbd994bfb55b
+md5_exe=6e6ae96a3282801c8d52bc6b1540145b
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210109.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210109.exe?use_mirror=autoselect
